managed generation id
